Added esperanto language

--- a/views/shared/css/flag-icon-css/css/flag-icon.css
+++ b/views/shared/css/flag-icon-css/css/flag-icon.css
@@ -414,6 +414,9 @@
 .flag-icon-eh.flag-icon-squared {
   background-image: url(../flags/1x1/eh.svg);
 }
+.flag-icon-eo.flag-icon-squared {
+  background-image: url(../flags/1x1/eo.svg);
+}
 .flag-icon-er {
   background-image: url(../flags/4x3/er.svg);
 }
