Added esperanto language

--- a/views/shared/css/flag-icon-css/sass/_flag-icon-list.scss
+++ b/views/shared/css/flag-icon-css/sass/_flag-icon-list.scss
@@ -69,6 +69,7 @@
   @include flag-icon(ee);
   @include flag-icon(eg);
   @include flag-icon(eh);
+  @include flag-icon(eo);
   @include flag-icon(er);
   @include flag-icon(es);
   @include flag-icon(et);
